# hub

./: Cargo.toml  README.md  Rocket.toml  install.sh  mosquitto.conf  smb.conf  start.sh  syhub.service  syhub_install.sh
apache/: nextcloud.conf
client/: backups.py
scripts/: docker_install.sh  mariadb_install.sh  mosquitto_install.sh  nextcloud_install.sh  penpot_install.sh  samba_install.sh
src/: main.rs
