[package]
name = "hub"
description = "A general purpose service to manage dataflow and processes with the hub server"
version = "0.1.1"
edition = "2021"
authors = [ "Samuel Noesslböck <samuel.noesslboeck@gmail.com>" ]

[dependencies]
rand = "0.9.0"
rocket = { version =  "0.5.1", features = [ "tls" ] }
rumqttc = "0.24.0"
